--- a/pyiArduinoI2Ctds/cpp/Makefile
+++ b/pyiArduinoI2Ctds/cpp/Makefile
@@ -1,7 +1,10 @@
-all: FindDevices NewAddress
+all: FindDevices NewAddress getData getSettings setCalibration
 
 FindDevices             :FindDevices.cpp ../iarduino_I2C_TDS.cpp
 NewAddress              :NewAddress.cpp ../iarduino_I2C_TDS.cpp
+getData                 :main.cpp getData.cpp ../iarduino_I2C_TDS.cpp
+getSettings             :main.cpp getSettings.cpp ../iarduino_I2C_TDS.cpp
+setCalibration          :main.cpp setCalibration.cpp ../iarduino_I2C_TDS.cpp
 
 clean:
-	rm -f FindDevices NewAddress
+	rm -f FindDevices NewAddress getData getSettings setCalibration
